--- a/youtube.css
+++ b/youtube.css
@@ -4,9 +4,24 @@ body
 	color:#F3F4F1;
 	font-family: 'Ubuntu', sans-serif;
 	font-size: 16px;
-	margin: 0 auto;
+	margin: 1em auto;
 	max-width: 960px;
 }
+#btnir
+{
+	border: 1px solid peru;
+	border-radius: 5px;
+	height:50px;
+
+}
+
+#txtbusqueda {
+	border-radius: 5px;
+	border: 1px solid peru;
+	font-size: 1em;
+	height: 50px;
+}
+
 .i-frame
 {
 	display: none;
